# payjp-rust-with-openapi

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: main.yml  openapi.yml
async-payjp/: Cargo.toml
async-payjp-client-core/: Cargo.toml
async-payjp-client-core/src/: pagination.rs
async-payjp-types/src/: currency.rs  pagination.rs
async-payjp/src/: error.rs  lib.rs
async-payjp/src/async_std/: client.rs  config.rs
async-payjp/src/hyper/: blocking.rs  client.rs  client_builder.rs
examples/pagination/: Cargo.toml
examples/pagination/src/: customer.rs  main.rs
openapi/: .gitignore  Cargo.toml  README.md  doc_urls.json  gen_crates.toml
openapi/docs/: README.md  account.json  balance.json  base.json  charge.json  common.json  common.jsonnet  customer.json  docker-compose.yml  errors.json  event.json  paginations.json  plan.json  pyproject.toml  root.jsonnet  statement.json  subscription.json  tds.json  tenant.json  term.json  three_d_secure_request.json  token.json
openapi/docs/components/: metadata.jsonnet
openapi/docs/paths/: charge.jsonnet  customer.jsonnet  event.jsonnet  statement.jsonnet  subscription.jsonnet  tenant.jsonnet  token.jsonnet
openapi/docs/src/: root.jsonnet
openapi/docs/src/components/: errors.jsonnet  rate_limit.jsonnet
openapi/docs/src/paths/: account.jsonnet  balance.jsonnet  charge.jsonnet  customer.jsonnet  event.jsonnet  plan.jsonnet  statement.jsonnet  subscription.jsonnet  tds.jsonnet  tenant.jsonnet  three_d_secure_request.jsonnet
openapi/src/: args.rs  codegen.rs  components.rs  crate_inference.rs  crate_table.rs  crates.rs  deduplication.rs  graph.rs  lib.rs  main.rs  object_writing.rs  overrides.rs  printable.rs  requests.rs  resource_object.rs  rust_type.rs  spec.rs  spec_fetch.rs  spec_inference.rs  types.rs  url_finder.rs  utils.rs  visitor.rs  webhook.rs
openapi/src/templates/: cargo_toml.rs  object_trait.rs  requests.rs
tests/: Cargo.toml
tests/tests/it/: deser.rs  pagination_utils.rs
