[package]
name = "async-payjp-tests"
version = "0.0.1"
edition = "2021"
publish = false

[dev-dependencies]
serde.workspace = true
miniserde.workspace = true
serde_qs.workspace = true
serde_json.workspace = true
chrono = "0.4.26"
httpmock = { version = "0.7.0", default-features = false }
wiremock = "0.5.22"
futures-util = { version = "0.3.21" }
bytes = "1.6.0"
tokio = { version = "1.24.1", features = ["rt", "macros"] }
async-stripe-types = { path = "../async-payjp-types", features = ["serialize"] }
async-payjp-client-core = { path = "../async-payjp-client-core" }
async-payjp-core = { path = "../generated/async-payjp-core", features = ["customer", "charge", "token", "serialize"] }

async-payjp = { path = "../async-payjp", default-features = false, features = ["blocking", "async-std-surf"] }

# Copied from async-payjp/Cargo.toml features so that we can run with all those features too
[features]
default = ["default-tls"]
native-tls = ["default-tls"]
default-tls = ["async-payjp/default-tls"]
rustls-tls-webpki-roots = ["async-payjp/rustls-tls-webpki-roots"]
rustls-tls-native = ["async-payjp/rustls-tls-native"]
